[DevTools] Ignore track invalid origin for cache storage live update

Removed error message for invalid url, instead do nothing.

Bug: 760353
Change-Id: I1de5cf59b274838f0632b8d8141772d4929cc794